# blog

./: .gitignore  404.html  README.md  blog.cabal  blog.nix  contact.md  default.nix  index.html  resume.md  site.hs  stack.yaml
css/: custom.css  simple-grid.css  tufte.css
docs/: 404.html  CNAME  archive.html  contact.html  feed.xml  index.html  resume.html
docs/css/: custom.css  tufte.css
docs/posts/: 2018-04-26-programming-with-arrows.html  2018-05-04-getting-started-with-eta.html  2018-05-04-micro-services-with-servant.html  2018-05-10-setting-up-hakyll-static-site.html  2018-05-11-haskell-project-setup-using-stack.html  2018-05-18-solving-simple-coding-problem-in-haskell.html  2018-05-19-19-building-micro-services-in-haskell.html  2018-05-19-working-with-aeson-in-haskell.html  2018-05-20-working-with-aeson-in-haskell.html  2018-08-19-understanding-nix-package-manager.html  (+3 more)
posts/: 2018-04-26-programming-with-arrows.md  2018-05-04-getting-started-with-eta.md  2018-05-04-micro-services-with-servant.md  2018-05-10-setting-up-hakyll-static-site.md  2018-05-11-haskell-project-setup-using-stack.md  2018-05-18-solving-simple-coding-problem-in-haskell.md  2018-05-19-19-building-micro-services-in-haskell.md  2018-05-19-working-with-aeson-in-haskell.md  2018-05-20-working-with-aeson-in-haskell.md  2018-08-19-understanding-nix-package-manager.md  2018-09-07-content-aware-static-file-serving.md  2018-09-08-getting-started-with-nix.md  2018-09-09-queue-in-haskell-scala.md
static/: CNAME
templates/: archive.html  default.html  post-list.html  post.html
