name:               blog
version:            0.1.2.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.12.*
                  , filepath == 1.*
                  , time == 1.8.*
  ghc-options:      -threaded
  default-language: Haskell2010
